[tool.poetry]
name = "ds-study"
version = "0.1.0"
description = "study data science"
authors = ["koiketakayuki <koiketakayuki.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1.2"
numpy = "^1.18.0"
pandas = "^0.25.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
